%% Auto-generado con dbml_to_mermaid_custom.py
erDiagram
  ROL {
    int id_rol
    text nombre_rol
    text descripcion
  }

  CATEGORIA {
    int id_categoria
    text nombre
    text descripcion
  }

  PAQUETE_RECARGA {
    int id_paquete
    text nombre_paquete
    int puntos
    money costo
    timestamp fecha_actualizado
  }

  CAMPANA_ECOLOGICA {
    int id_campana
    text nombre
    text descripcion
    tipo_campana tipo
    boolean estado
    timestamp fecha_inicio
    timestamp fecha_fin
  }

  MISION {
    int id_mision
    int cantidad_objetivo
    text detalle_objetivo
    timestamp fecha_limite
  }

  USUARIO {
    int id_usuario
    text correo
    text nombre
    text contrasena
    estado_usr estado
    timestamp fecha_registro
  }

  BILLETERA {
    int id_billetera
    money credito_total
    money credito_actual
    money credito_retenido
    timestamp ultima_actualizacion
  }

  BILLETERA_PUNTOS {
    int id_billetera_Puntos
    int total
    int en_posesion
    timestamp ultima_actualizacion
  }

  PUBLICACION {
    int id_publicacion
    text titulo
    money precio
    text campo
    int existencias
    decimal peso_unidad
    text foto
    text descripcion
    estado_pbcn estado
    timestamp fecha_publicacion
  }

  INTERCAMBIO {
    int id_intercambio
    money creditos_verdes
    int cantidad
    int estado
    timestamp fecha_creacion
    timestamp fecha_cierre
  }

  FAVORITO {
    timestamp fecha_marcado
  }

  MOVIMIENTO_CREDITO {
    int id_mov_credito
    text tipo_movimiento
    money monto
    text origen
    timestamp fecha_mov
    text descripcion
  }

  CUSTODIA_CREDITOS {
    int id_custodia_creditos
    money monto
    int estado
    timestamp fecha_retenido
    timestamp fecha_liberacion
    int comprador_id
    int oferente_id
    int billetera_vendedor
    int billetera_comprador
  }

  CANJEO_PUNTOS {
    int cantidad
    timestamp fecha_canje
  }

  COMPRA_PAQUETE {
    int id_compra
    tipo_pago metodo_pago
    timestamp fecha_compra
  }

  PROGRESO_MISION {
    int cantidad_cumplida
    timestamp fecha_completado
  }

  ACELERADOR_CREDITO {
    int id_acelerador
    text nombre
    text tipo
    decimal multiplicador
    boolean estado
    timestamp fecha_inicio
    timestamp fecha_fin
  }

  MENSAJE {
    int id_mensaje
    text contenido
    timestamp fecha_envio
  }

  NOTIFICACIONES {
    int id_notificacion
    text titulo
    text mensaje
    text tipo
    boolean leida
    timestamp fecha_creacion
    timestamp fecha_leida
    text accion_url
  }

  EQUIVALENCIA_ECOLOGICA {
    int id_equivalencia
    text descripcion
    unidades unidad_medida
    timestamp fecha_inicio
  }

  REPORTES_IMPACTO {
    int id_reporte
    int id_usuario
    decimal co2
    decimal energia_ahorrada
    decimal agua_preservada
    timestamp fecha_registro
  }

  FACTOR_EQUIVALENCIA {
    int id_factor_eq
    decimal co2xkg
    decimal energiaxkwh
    decimal aguaxlitro
  }

  BITACORA_ACCESOS {
    int id_bitacora_acceso
    text correo_intento
    timestamp fecha_intento
    text tipo_acceso
    text direccion_ip
    text user_agent
  }

  BITACORA_MODIFICACIONES {
    int id_bitacora_modificaciones
    text tabla_afectada
    timestamp fecha_modificacion
    text tipo_operacion
    text detalle
    int usuario_modificador
  }

  DETALLE_MODIFICACIONES {
    int id_detalle
    text campo
    text valor_anterior
    text valor_nuevo
  }

  AUDITORIA_CAMBIOS {
    int id_auditoria
    text tabla_afectada
    int operacion
    timestamp fecha_cambio
    text ip_address
  }

  DETALLE_AUDITORIA {
    int id_auditoria
    text campo
    text valor_anterior
    text valor_nuevo
  }

  BITACORA_INTERCAMBIOS {
    int id_bitaroca_intercambios
    money creditos_movidos
    timestamp fecha_intercambio
    text estado_anterior
    text estado_nuevo
    text detalle
    int intercambio_id
    int comprador_id
    int vendedor_id
    int publicacion_id
  }

  LOGS_SISTEMA {
    int id_log
    text nivel
    text modulo
    text mensaje
    jsonb detalles
    timestamp fecha_creacion
    text ip_origen
  }

  METRICAS_SISTEMA {
    int id_metrica
    text tipo_metrica
    numeric valor
    timestamp fecha_medicion
    jsonb detalles
  }

  TAREAS_PROGRAMADAS {
    int id_tarea
    text nombre
    text descripcion
    text procedimiento
    int intervalo_ejecucion
    timestamp ultima_ejecucion
    timestamp activa
    jsonb configuracion
  }


  ROL ||--o{ USUARIO : ""
  USUARIO ||--|| BILLETERA : ""
  USUARIO ||--|| BILLETERA_PUNTOS : ""
  USUARIO ||--o{ PUBLICACION : ""
  CATEGORIA ||--o{ PUBLICACION : ""
  USUARIO ||--o{ INTERCAMBIO : ""
  PUBLICACION ||--o{ INTERCAMBIO : ""
  USUARIO ||--o{ FAVORITO : ""
  PUBLICACION ||--o{ FAVORITO : ""
  BILLETERA ||--o{ MOVIMIENTO_CREDITO : ""
  USUARIO ||--o{ CUSTODIA_CREDITOS : ""
  BILLETERA ||--|| CUSTODIA_CREDITOS : ""
  INTERCAMBIO ||--|| CUSTODIA_CREDITOS : ""
  BILLETERA ||--o{ CANJEO_PUNTOS : ""
  BILLETERA_PUNTOS ||--o{ CANJEO_PUNTOS : ""
  BILLETERA_PUNTOS ||--o{ COMPRA_PAQUETE : ""
  PAQUETE_RECARGA ||--o{ COMPRA_PAQUETE : ""
  MISION ||--o{ PROGRESO_MISION : ""
  USUARIO ||--o{ PROGRESO_MISION : ""
  BILLETERA ||--o{ ACELERADOR_CREDITO : ""
  CAMPANA_ECOLOGICA ||--o{ ACELERADOR_CREDITO : ""
  USUARIO ||--o{ MENSAJE : ""
  INTERCAMBIO ||--o{ MENSAJE : ""
  USUARIO ||--o{ NOTIFICACIONES : ""
  CATEGORIA ||--o{ EQUIVALENCIA_ECOLOGICA : ""
  PUBLICACION ||--o{ REPORTES_IMPACTO : ""
  EQUIVALENCIA_ECOLOGICA ||--o{ FACTOR_EQUIVALENCIA : ""
  USUARIO ||--o{ BITACORA_ACCESOS : ""
  USUARIO ||--o{ BITACORA_MODIFICACIONES : ""
  BITACORA_MODIFICACIONES ||--o{ DETALLE_MODIFICACIONES : ""
  USUARIO ||--o{ AUDITORIA_CAMBIOS : ""
  AUDITORIA_CAMBIOS ||--o{ DETALLE_AUDITORIA : ""
  INTERCAMBIO ||--o{ BITACORA_INTERCAMBIOS : ""
  USUARIO ||--o{ BITACORA_INTERCAMBIOS : ""
  PUBLICACION ||--o{ BITACORA_INTERCAMBIOS : ""
  USUARIO ||--o{ LOGS_SISTEMA : ""